k8s/infrastructure/network/gateway/base/Gateway.default.yaml
# https://docs.cilium.io/en/latest/network/servicemesh/gateway-api/parameterized-gatewayclass/
# https://blog.stonegarden.dev/articles/2023/12/cilium-gateway-api/
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns01-issuer
spec:
  gatewayClassName: eg
  infrastructure:
    labels:
      arp.cilium.io/announce-service: default-arp-l2-announcement-policy
      arp.cilium.io/ip-pool: default-arp-ip-pool
    annotations:
      lbipam.cilium.io/ips: 192.168.2.2
  # addresses:
  #   - type: IPAddress
  #     value: 192.168.2.2
  listeners:
    - name: forgejo-ssh
      protocol: TCP
      port: 22
      allowedRoutes: {namespaces: {from: Selector, selector: {matchLabels: {app.kubernetes.io/name: forgejo}}}}

    # - name: ldap
    #   protocol: TCP
    #   port: 389
    #   allowedRoutes: {namespaces: {from: Selector, selector: {matchLabels: {app.kubernetes.io/name: light-ldap}}}}
    - name: ldaps
      protocol: TLS
      hostname: ldap.karlsen.fr
      port: 636
      allowedRoutes: {namespaces: {from: Selector, selector: {matchLabels: {app.kubernetes.io/name: light-ldap}}}}
      tls: {mode: Passthrough}

    - name: step-ca
      protocol: TLS
      hostname: ca.karlsen.fr
      port: 443
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Passthrough}

    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes: {namespaces: {from: All}}

    - name: https-karlsen-fr
      protocol: HTTPS
      port: 443
      hostname: karlsen.fr
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: karlsen-fr-certificate}]}
    - name: https-wc-karlsen-fr
      protocol: HTTPS
      port: 443
      hostname: '*.karlsen.fr'
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: wc-karlsen-fr-certificate}]}

    - name: https-karlsen-org
      protocol: HTTPS
      port: 443
      hostname: karlsen.org
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: karlsen-org-certificate}]}
    - name: https-wc-karlsen-org
      protocol: HTTPS
      port: 443
      hostname: '*.karlsen.org'
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: wc-karlsen-org-certificate}]}

    - name: https-karlsen-app
      protocol: HTTPS
      port: 443
      hostname: karlsen.app
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: karlsen-app-certificate}]}
    - name: https-wc-karlsen-app
      protocol: HTTPS
      port: 443
      hostname: '*.karlsen.app'
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: wc-karlsen-app-certificate}]}
