k8s/infrastructure/network/gateway/base/Gateway.internal.yaml
# https://docs.cilium.io/en/latest/network/servicemesh/gateway-api/parameterized-gatewayclass/
# https://blog.stonegarden.dev/articles/2023/12/cilium-gateway-api/
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns01-issuer
spec:
  gatewayClassName: eg
  infrastructure:
    labels:
      arp.cilium.io/announce-service: default-arp-l2-announcement-policy
      arp.cilium.io/ip-pool: default-arp-ip-pool
    annotations:
      lbipam.cilium.io/ips: 192.168.2.1
  # addresses:
  #   - type: IPAddress
  #     value: 192.168.2.1
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes: {namespaces: {from: All}}

    # - name: https-talmox-hera-home-karlsen-fr
    #   protocol: HTTPS
    #   port: 443
    #   hostname: talmox.hera.home.karlsen.fr
    #   allowedRoutes: {namespaces: {from: All}}
    #   tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: talmox-hera-home-karlsen-fr-certificate}]}
    - name: https-wc-talmox-hera-home-karlsen-fr
      protocol: HTTPS
      port: 443
      hostname: '*.talmox.hera.home.karlsen.fr'
      allowedRoutes: {namespaces: {from: All}}
      tls: {mode: Terminate, certificateRefs: [{kind: Secret, name: wc-talmox-hera-home-karlsen-fr-certificate}]}
