k8s/infrastructure/network/gateway/base/SecurityPolicy.yaml
# Cross namespace attachment?
# - https://github.com/envoyproxy/gateway/issues/5143
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: default-deny-ingress
  namespace: gateway
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: Gateway, name: internal}
    - {group: gateway.networking.k8s.io, kind: Gateway, name: default}
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 192.168.0.0/24  # Physical machines
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: allow-all-http
  namespace: gateway
spec:
  targetRefs:
    - {group: gateway.networking.k8s.io, kind: HTTPRoute, name: https-upgrade}
  authorization:
    defaultAction: Allow
# ---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: SecurityPolicy
# metadata:
#   name: allow-oidc-http
#   namespace: gateway
# spec:
#   targetRefs: {}
#   authorization:
#     defaultAction: Deny
#     rules:
#       - action: Allow
#         principal:
#           clientCIDRs:
#             - 192.168.0.0/24  # Physical machines
#   # oidc: {}
